Se agrego 2 iconos junto al input de email y password,al igual que se formo el wrapper o caja de login

--- a/login.html
+++ b/login.html
@@ -46,7 +46,10 @@
                     <label><input type="checkbox"> Recodarme</label>
                     <a href="#">Olvidaste la Contraseña?</a>
                 </div>
-                
+                <button type="submit" class="btn">Login</button>
+                <div class="login-register">
+                    <p>No tienes un cuenta?<a href="#" class="register"> Registrarse</a></p>
+                </div>
             </form>
 
         </div>
