--- a/login.html
+++ b/login.html
@@ -28,6 +28,11 @@
     </header>
 
     <div class="wrapper">
+
+        <span class="icon-close">
+            <ion-icon name="close-outline"></ion-icon>
+        </span>
+
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -52,6 +57,36 @@
             </form>
 
         </div>
+
+        <div class="form-box register">
+            <h2>Registro</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Nombre de Usuario</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Contraseña</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">Aceptar los terminos y condiciones</label>
+                </div>
+                <button type="submit" class="btn">Registrarse</button>
+                <div class="login-register">
+                    <p>Ya tienes una cuenta?<a href="#" class="login-link">  Inicia Sesion</a></p>
+                </div>
+            </form>
+
+        </div>
+
     </div>
 
 </body>
