--- a/login.html
+++ b/login.html
@@ -7,7 +7,6 @@
     <meta name="author" content="UruDevs">
     <meta name="description" content="Login">
     <link rel='stylesheet' type='text/css' media='screen' href='stylelogin.css'>
-    <script src='loginJS.js'></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>Hugs Login</title>
@@ -88,6 +87,6 @@
         </div>
 
     </div>
-
+    <script src="loginJS.js"></script>
 </body>
 </html>
