Agregamos el logo y modificamos el navbar. Problema: No pude cambiar el color del logo en SVG o titulo

--- a/login.html
+++ b/login.html
@@ -17,12 +17,16 @@
 <body>
 
     <header>
-        <h2 class="logo">Logo</h2>
+        <div class="navbar-left">
+            <img src="Imagenes/Logo_Hugs.svg" alt="Logo" class="logo">
+            <img src="Imagenes/Texto_Hugs.svg" alt="TextoLogo" class="textologo">
+            </div>
         <nav class="navigation">
             <a href="">Inicio</a>
             <a href="">Sobre nosotros</a>
             <a href="">Contacto</a>
             <button class="boton-login-popup">Login</button>
+            
         </nav>
     </header>
 
@@ -47,7 +51,7 @@
                     
                 </div>
                 <div class="remember-forgot">
-                    <label><input type="checkbox"> Recodarme</label>
+                    <label><input type="checkbox"> Recordarme</label>
                     <a href="#">Olvidaste la Contraseña?</a>
                 </div>
                 <button type="submit" class="btn">Login</button>
