Modificamos el archivo JS y sacamos lineas para poder hacer la ventana de settings funcional

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav-right">
 
-            <div class="iconousuario online" id="iconousuario">
+            <div class="iconousuario online" onclick="settingsMenuToggle()">
                 <img src="Imagenes/profile-pic.png">
             </div>
 
