--- a/login.html
+++ b/login.html
@@ -60,17 +60,17 @@
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" placeholder="Crear un nombre de usuario" required>
+                    <input type="text" id="nombreusuario" placeholder="Crear un nombre de usuario" required>
                     <label>Nombre de Usuario</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" placeholder="Ingrese su Email" required>
+                    <input type="email" id="email" placeholder="Ingrese su Email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" placeholder="Ingrese una contraseña" required>
+                    <input type="password" id="password" placeholder="Ingrese una contraseña" required>
                     <label>Contraseña</label>
                 </div>
                 <div class="remember-forgot">
